TypedLama/regression/compile_error/test011.3.lama
-- check static type conformity of functions
-- wrong return type of the body
wrong_body_type :: (Int, A, B) -> Str;
fun wrong_body_type(i, a, b) {
  Wrong(i)
}